...
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="show_pending_reminders">Show pending reminders</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
...

    <string name="books_context_menu_item_rename">Rename</string>
    <string name="books_context_menu_item_set_link">Set Link</string>
    <string name="books_context_menu_item_force_save">Force Save</string>
    <string name="books_context_menu_item_force_load">Force Load</string>

    <string name="move">Move</string>

    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>

    <string name="heads_action_menu_item_paste_above">Paste above</string>
    <string name="heads_action_menu_item_paste_under">Paste under</string>
    <string name="heads_action_menu_item_paste_below">Paste below</string>
    <string name="heads_moving_action_menu_item_promote">Promote</string>
    <string name="heads_moving_action_menu_item_down">Down</string>
    <string name="heads_moving_action_menu_item_up">Up</string>
    <string name="heads_moving_action_menu_item_demote">Demote</string>
    <string name="new_note">New note</string>
    <string name="quick_note">Quick note</string>
    <string name="tap_to_create_new_note">Tap to create a new note</string>
    <string name="options_menu_item_search">Search</string>

    <string name="repos_options_menu_new_repo">New Repository</string>
    <string name="book_name_already_exists">Notebook %s already exists</string>
...
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>
...
    <string name="share_type_not_supported">Share type %s is not supported</string>

    <string name="repositories">Repositories</string>
    <string name="repository_not_valid_with_reason">Repository invalid: %s</string>
    <string name="invalid_repo_url">Invalid repository URL “%s”</string>
    <string name="repository_url_already_exists">Repository with this URL already exists</string>
    <string name="new_above">New above</string>
    <string name="new_under">New under</string>
    <string name="new_below">New below</string>

    <string name="confirm_unlinking_from_dropbox_title">Unlink from Dropbox?</string>
    <string name="confirm_unlinking_from_dropbox_message">You will not be able to sync to Dropbox until you link to it again.</string>

    <string name="note_book_not_set">Notebook not set</string>
    <string name="title_can_not_be_empty">Title cannot be empty</string>
...
